--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,39 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>E-Commerce</title>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <nav class="header">
-      <mat-toolbar>
-        <button
-          mat-icon-button
-          class="menu-icon"
-          aria-label="Example icon-button with menu icon"
-        >
-          <mat-icon>menu</mat-icon>
-        </button>
+<head>
+  <title>E-Commerce</title>
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+</head>
+<body>
+  <nav class="header">
+    <mat-toolbar class="bar">
+      <button
+        mat-icon-button
+        class="menu-icon"
+        aria-label="Example icon-button with menu icon"
+      >
+        <mat-icon>menu</mat-icon>
+      </button>
 
-        <div class="box"><span class="text">My App</span></div>
-        <span class="sample"></span>
-        <div class="product-link">
-          <a href routerLink="Products">Products</a>
-        </div>
-        <button
-          mat-icon-button
-          class="favorite-icon"
-          aria-label="Example icon-button with heart icon"
-        >
-          <mat-icon>favorite</mat-icon>
-        </button>
-        <button
-          mat-icon-button
-          class="share-icon"
-          aria-label="Example icon-button with share icon"
-        >
-          <mat-icon>share</mat-icon>
-        </button>
-      </mat-toolbar>
-    </nav>
-  </body>
-</html>
+      <div class="box"><span class="text">My App</span></div>
+      <span class="sample"></span>
+      <button class="product-link" (click)="onButtonClicked()">Products</button>
+      <button
+        mat-icon-button
+        class="favorite-icon"
+        aria-label="Example icon-button with heart icon"
+      >
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button
+        mat-icon-button
+        class="share-icon"
+        aria-label="Example icon-button with share icon"
+      >
+        <mat-icon>share</mat-icon>
+      </button>
+    </mat-toolbar>
+  </nav>
+  <router-outlet></router-outlet>
+</body>
